--- a/src/cascadia/TerminalApp/TabHeaderControl.xaml
+++ b/src/cascadia/TerminalApp/TabHeaderControl.xaml
@@ -1,16 +1,31 @@
 <!-- Copyright (c) Microsoft Corporation. All rights reserved. Licensed under
 the MIT License. See LICENSE in the project root for license information. -->
+
 <UserControl
     x:Class="TerminalApp.TabHeaderControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:TerminalApp"
+    xmlns:mux="using:Microsoft.UI.Xaml.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
     <StackPanel x:Name="HeaderStackPanel"
                 Orientation="Horizontal">
+        <mux:ProgressRing x:Name="HeaderProgressRing"
+                          IsActive="{x:Bind IsProgressRingActive, Mode=OneWay}"
+                          Visibility="{x:Bind IsProgressRingActive, Mode=OneWay}"
+                          IsIndeterminate="{x:Bind IsProgressRingIndeterminate, Mode=OneWay}"
+                          Value="{x:Bind ProgressValue, Mode=OneWay}"
+                          MinHeight="0"
+                          MinWidth="0"
+                          Height="15"
+                          Width="15"
+                          Margin="-7.5,0,8,0"/>
+        <!--We want the progress ring to 'replace' the tab icon, but we don't have control
+        over the tab icon here (the tab view item does) - so we hide the tab icon there
+        and use a negative margin for the progress ring here to put it where the icon would be-->
         <FontIcon x:Name="HeaderZoomIcon"
                   FontFamily="Segoe MDL2 Assets"
                   Visibility="{x:Bind IsPaneZoomed, Mode=OneWay}"
