Fix margins and box width in SUI (#8616)
<!-- Enter a brief description/summary of your PR here. What does it fix/what does it change/how was it tested (even manually, if necessary)? -->
## Summary of the Pull Request
Fixed some of the margin alignments and increased the standard box width.

![image](https://user-images.githubusercontent.com/48369326/102658433-67c0ff00-412c-11eb-8deb-cf00593169a3.png)

![image](https://user-images.githubusercontent.com/48369326/102658447-6e4f7680-412c-11eb-8371-d4dfdc63b80a.png)

--- a/src/cascadia/TerminalSettingsEditor/CommonResources.xaml
+++ b/src/cascadia/TerminalSettingsEditor/CommonResources.xaml
@@ -6,7 +6,10 @@
     <x:Double x:Key="StandardFontSize">15.0</x:Double>
     <Thickness x:Key="StandardIndentMargin">20,0,0,0</Thickness>
     <Thickness x:Key="StandardControlSpacing">0,0,0,20</Thickness>
-    <x:Double x:Key="StandardBoxMinWidth">200</x:Double>
+    <x:Double x:Key="StandardBoxMinWidth">250</x:Double>
+    
+    <Thickness x:Key="PivotIndentMargin">10,0,0,0</Thickness>
+    <Thickness x:Key="PivotStackPanelMargin">0,10,0,0</Thickness>
 
     <!-- This is for easier transition to the SettingsContainer control.
          The SettingsContainer will wrap a setting with inheritance UI.-->
