Show clipboard contents in multiple line paste warning dialog (#8744)
When we display a dialog to warn the user that they are doing a
multi-line paste, we show the clipboard contents

The contents are shown in a scroll viewer with a fixed maximum height.

Closes #7997

--- a/src/cascadia/TerminalApp/TerminalPage.xaml
+++ b/src/cascadia/TerminalApp/TerminalPage.xaml
@@ -58,6 +58,26 @@ the MIT License. See LICENSE in the project root for license information. -->
             x:Name="MultiLinePasteDialog"
             x:Uid="MultiLinePasteDialog"
             DefaultButton="Primary">
+            <StackPanel>
+                <TextBlock
+                    x:Uid="MultiLineWarningText"
+                    TextWrapping="Wrap">
+                </TextBlock>
+                <TextBlock
+                    x:Uid="ClipboardTextHeader"
+                    Margin="0,16,0,0">
+                </TextBlock>
+                <ScrollViewer
+                    Margin="0,8,0,0"
+                    x:Name="ClipboardContentScrollViewer"
+                    MaxHeight="100">
+                    <TextBlock
+                        x:Name="ClipboardText"
+                        TextWrapping="Wrap"
+                        FontFamily="Cascadia Mono">
+                    </TextBlock>
+                </ScrollViewer>
+            </StackPanel>
         </ContentDialog>
 
         <ContentDialog
