Polish Global settings a bit (#8783)
Polish for global settings in SUI

- Launch size can no longer be negative
- Reorder appearance options

## PR Checklist
* [x] Closes #8766

--- a/src/cascadia/TerminalSettingsEditor/Launch.xaml
+++ b/src/cascadia/TerminalSettingsEditor/Launch.xaml
@@ -91,6 +91,7 @@ the MIT License. See LICENSE in the project root for license information. -->
                         <Style x:Key="LaunchSizeNumberBoxStyle" TargetType="muxc:NumberBox" BasedOn="{StaticResource NumberBoxSettingStyle}">
                             <Setter Property="SmallChange" Value="1"/>
                             <Setter Property="LargeChange" Value="10"/>
+                            <Setter Property="Minimum" Value="1"/>
                         </Style>
                     </Grid.Resources>
                     <Grid.RowDefinitions>
